Add refresh service

--- a/custom_components/ccei_tild/translations/en.json
+++ b/custom_components/ccei_tild/translations/en.json
@@ -21,5 +21,11 @@
         }
       }
     }
+  },
+  "services": {
+    "refresh": {
+      "name": "Refresh sensors data",
+      "description": "Force sensor data to be refreshed immediately."
+    }
   }
 }
