--- a/custom_components/ccei_tild/translations/fr.json
+++ b/custom_components/ccei_tild/translations/fr.json
@@ -21,5 +21,11 @@
         }
       }
     }
+  },
+  "services": {
+    "refresh": {
+      "name": "Rafraîchir les données des capteurs",
+      "description": "Forcer le rafraîchissement des données des capteurs immédiatement."
+    }
   }
 }
