--- a/custom_components/ccei_tild/translations/fr.json
+++ b/custom_components/ccei_tild/translations/fr.json
@@ -1,31 +1,39 @@
 {
-  "title": "CCEI Tild",
-  "config": {
-    "step": {
-      "user": {
-        "description": "Merci de configurer la connexion à votre boitier CCEI Tild.",
-        "data": {
-          "host": "Adresse IP (ou nom d'hôte) de votre boitier Tild",
-          "refresh_rate": "Fréquence de rafraîchissement (en minutes)"
+    "title": "CCEI Tild",
+    "config": {
+        "step": {
+            "user": {
+                "description": "Merci de configurer la connexion à votre boitier CCEI Tild.",
+                "data": {
+                    "host": "Adresse IP (ou nom d'hôte) de votre boitier Tild",
+                    "refresh_rate": "Fréquence de rafraîchissement (en minutes)"
+                }
+            }
         }
-      }
-    }
-  },
-  "options": {
-    "step": {
-      "init": {
-        "description": "Merci de reconfigurer la connexion à votre boitier CCEI Tild.",
-        "data": {
-          "host": "Adresse IP (ou nom d'hôte) de votre boitier Tild",
-          "refresh_rate": "Fréquence de rafraîchissement (en minutes)"
+    },
+    "options": {
+        "step": {
+            "init": {
+                "description": "Merci de reconfigurer la connexion à votre boitier CCEI Tild.",
+                "data": {
+                    "host": "Adresse IP (ou nom d'hôte) de votre boitier Tild",
+                    "refresh_rate": "Fréquence de rafraîchissement (en minutes)"
+                }
+            }
         }
-      }
+    },
+    "services": {
+        "refresh": {
+            "name": "Rafraîchir les données des capteurs",
+            "description": "Forcer le rafraîchissement des données des capteurs immédiatement."
+        },
+        "set_light_color": {
+            "name": "Définir la couleur de la lumière",
+            "description": "Permet de définir la couleur de la lumière depuis la liste des couleurs supportées."
+        },
+        "set_light_intensity": {
+            "name": "Définir l'intensité de la lumière",
+            "description": "Permet de définir l'intensité de la lumière depuis la liste des intensités supportées."
+        }
     }
-  },
-  "services": {
-    "refresh": {
-      "name": "Rafraîchir les données des capteurs",
-      "description": "Forcer le rafraîchissement des données des capteurs immédiatement."
-    }
-  }
 }
